--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ol>
     <h2>WEB</h2>
     <p>
-        The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://www.example.com/), which may be interlinked by hypertext, and are accessible over the Internet.[1][2] The resources of the WWW are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software application called a web server.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id itaque temporibus reiciendis corporis! Maiores, veniam eius deleniti temporibus modi exercitationem repellat veritatis amet itaque, nam expedita eos illo nesciunt reiciendis?
     </p>
 </body>
 
