--- a/1.html
+++ b/1.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB - html</title>
 </head>
+
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
@@ -12,12 +14,16 @@
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-	test 99    
+
     <h2>HTML</h2>
     <p>
-        <strong><a href="https://en.wikipedia.org/wiki/HTML">Hypertext Markup Language (HTML)</a></strong> is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
+        <strong><a href="https://en.wikipedia.org/wiki/HTML">Hypertext Markup Language (HTML)</a></strong> is the
+        standard markup language for documents designed to be displayed in a web browser. It can be assisted by
+        technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
 
-        Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document
+        Web browsers receive HTML documents from a web server or from local storage and render the documents into
+        multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for
+        the appearance of the document
     </p>
 </body>
 
