--- a/3.html
+++ b/3.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB - html</title>
 </head>
+
 <body>
     <h1><a href="index.html">WEB</a></h1>
+    <!-- <input type="button" value="night" onclick="
+        document.querySelector('body').style.backgroundColor = 'black' ;
+        document.querySelector('body').style.color = 'white' ;
+    ">
+    <input type="button" value="day" onclick="
+        document.querySelector('body').style.backgroundColor = 'white' ;
+        document.querySelector('body').style.color = 'black' ;
+    "> -->
+    <input type="button" value="night" onclick="
+    var target = document.querySelector('body');
+    if (this.value === 'night'){
+        target.style.color = 'white' ;
+        target.style.backgroundColor = 'black' ;
+        this.value = 'day';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while(i < alist.length){
+            alist[i].style.color = 'powderblue';
+            i = i + 1;
+        }
+    }else{
+        target.style.backgroundColor = 'white' ;
+        target.style.color = 'black' ;
+        this.value = 'night';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while(i < alist.length){
+            alist[i].style.color = 'blue';
+            i = i + 1;
+        }
+    }
+    ">
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
@@ -14,8 +50,22 @@
     </ol>
     <h2>JavaScript</h2>
     <p>
-        JavaScript (/ˈdʒɑːvəˌskrɪpt/),[6] often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.[7] JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing, prototype-based object-orientation, and first-class functions.
+        JavaScript (/ˈdʒɑːvəˌskrɪpt/),[6] often abbreviated as JS, is a programming language that conforms to the
+        ECMAScript specification.[7] JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has
+        curly-bracket syntax, dynamic typing, prototype-based object-orientation, and first-class functions.
     </p>
+    <input type="button" value="night" onclick="
+    if (this.value === 'night'){
+        document.querySelector('body').style.backgroundColor = 'black' ;
+        document.querySelector('body').style.color = 'white' ;
+        this.value = 'day';
+    }else{
+        document.querySelector('body').style.backgroundColor = 'white' ;
+        document.querySelector('body').style.color = 'black' ;
+        this.value = 'night';
+    }
+    ">
+
 </body>
 
 </html>
